[inputs]-[bug]:fix alignment issue
- margin was throwing off alignment with native inputs and buttons

--- a/scss/components/_inputs.scss
+++ b/scss/components/_inputs.scss
@@ -423,7 +423,7 @@ textarea.am-textarea {
 .select,
 .select-inline {
   @extend %focus--on;
-  margin: 4px 3px;
+  margin: 3px;
   cursor: pointer;
   height: 38px;
   padding-right: 5px;
